refactor(eatinorder): CreateEatInOrderRequest 생성